src/parser/y.output
   0  $accept : Program $end

   1  Program : GlobalDeclarations

   2  GlobalDeclarations :
   3                     | GlobalDeclaration GlobalDeclarations

   4  GlobalDeclaration : SimpleDeclaration
   5                    | RoutineDeclaration
   6                    | NEWLINE

   7  SimpleDeclaration : VariableDeclaration
   8                    | TypeDeclaration

   9  VariableDeclaration : VAR IDENTIFIER COLON Type ExpressionTail OptionalSemicolon
  10                      | VAR IDENTIFIER ExpressionTail OptionalSemicolon

  11  OptionalSemicolon : NEWLINE
  12                    | SEMICOLON

  13  ExpressionTail :
  14                 | IS Expression

  15  TypeDeclaration : TYPE IDENTIFIER IS Type

  16  RoutineDeclaration : ROUTINE IDENTIFIER LPAREN Parameters RPAREN TypeTail IS Body END OptionalSemicolon

  17  Return : RETURN Expression

  18  TypeTail :
  19           | COLON Type

  20  Parameters : ParameterDeclaration ParameterDeclarations

  21  ParameterDeclarations :
  22                        | COMMA ParameterDeclaration

  23  ParameterDeclaration : IDENTIFIER COLON Type

  24  Type : PrimitiveType
  25       | ArrayType
  26       | RecordType
  27       | IDENTIFIER

  28  PrimitiveType : INTEGER
  29                | REAL
  30                | BOOLEAN

  31  RecordType : RECORD NEWLINE VariableDeclarations END

  32  VariableDeclarations :
  33                       | VariableDeclaration VariableDeclarations
  34                       | NEWLINE VariableDeclarations

  35  ArrayType : ARRAY LBRACKET Expression RBRACKET Type

  36  Body :
  37       | BodyDeclaration Body

  38  BodyDeclaration : SimpleDeclaration
  39                  | Statement

  40  Statement : Assignment OptionalSemicolon
  41            | RoutineCall OptionalSemicolon
  42            | WhileLoop OptionalSemicolon
  43            | ForLoop OptionalSemicolon
  44            | IfStatement OptionalSemicolon
  45            | Print OptionalSemicolon
  46            | Return OptionalSemicolon
  47            | NEWLINE

  48  Assignment : ModifiablePrimary ASSIGN Expression

  49  RoutineCall : IDENTIFIER RoutineCallTail

  50  RoutineCallTail : LPAREN Expressions RPAREN

  51  Expressions : Expression
  52              | Expressions COMMA Expression

  53  WhileLoop : WHILE Expression LOOP Body END

  54  ForLoop : FOR IDENTIFIER Range LOOP Body END

  55  Range : IN ReverseTail Expression RANGE Expression

  56  ReverseTail :
  57              | REVERSE

  58  IfStatement : IF Expression THEN Body ElseTail END

  59  ElseTail :
  60           | ELSE Body

  61  Expression : Relation Relations
  62             | MINUS Relation

  63  Relations :
  64            | LogicWord Relation Relations

  65  LogicWord : AND
  66            | OR
  67            | XOR

  68  Relation : Simple SimpleTail

  69  SimpleTail :
  70             | RelationSign Simple SimpleTail

  71  RelationSign : LESS
  72               | GREATER
  73               | LEQUALS
  74               | GEQUALS
  75               | EQUALS
  76               | NEQUALS

  77  Simple : Factor FactorTail

  78  FactorTail :
  79             | FactorSign Factor FactorTail

  80  FactorSign : MULTIPLY
  81             | DIVIDE
  82             | REMAINDER

  83  Factor : Summand SummandTail

  84  SummandTail :
  85              | SummandSign Summand SummandTail

  86  SummandSign : PLUS
  87              | MINUS

  88  Summand : Primary
  89          | LPAREN Expression RPAREN

  90  Primary : INTEGER_LITERAL
  91          | REAL_LITERAL
  92          | TRUE
  93          | FALSE
  94          | ModifiablePrimary
  95          | RoutineCall

  96  ModifiablePrimary : IDENTIFIER ElementCall

  97  ElementCall :
  98              | DOT IDENTIFIER ElementCall
  99              | LBRACKET Expression RBRACKET ElementCall

 100  Print : PRINT LPAREN Expression RPAREN

state 0
	$accept : . Program $end  (0)
	GlobalDeclarations : .  (2)

	VAR  shift 1
	TYPE  shift 2
	ROUTINE  shift 3
	NEWLINE  shift 4
	$end  reduce 2

	Program  goto 5
	GlobalDeclarations  goto 6
	GlobalDeclaration  goto 7
	SimpleDeclaration  goto 8
	RoutineDeclaration  goto 9
	VariableDeclaration  goto 10
	TypeDeclaration  goto 11


state 1
	VariableDeclaration : VAR . IDENTIFIER COLON Type ExpressionTail OptionalSemicolon  (9)
	VariableDeclaration : VAR . IDENTIFIER ExpressionTail OptionalSemicolon  (10)

	IDENTIFIER  shift 12
	.  error


state 2
	TypeDeclaration : TYPE . IDENTIFIER IS Type  (15)

	IDENTIFIER  shift 13
	.  error


state 3
	RoutineDeclaration : ROUTINE . IDENTIFIER LPAREN Parameters RPAREN TypeTail IS Body END OptionalSemicolon  (16)

	IDENTIFIER  shift 14
	.  error


state 4
	GlobalDeclaration : NEWLINE .  (6)

	.  reduce 6


state 5
	$accept : Program . $end  (0)

	$end  accept


state 6
	Program : GlobalDeclarations .  (1)

	.  reduce 1


state 7
	GlobalDeclarations : GlobalDeclaration . GlobalDeclarations  (3)
	GlobalDeclarations : .  (2)

	VAR  shift 1
	TYPE  shift 2
	ROUTINE  shift 3
	NEWLINE  shift 4
	$end  reduce 2

	GlobalDeclarations  goto 15
	GlobalDeclaration  goto 7
	SimpleDeclaration  goto 8
	RoutineDeclaration  goto 9
	VariableDeclaration  goto 10
	TypeDeclaration  goto 11


state 8
	GlobalDeclaration : SimpleDeclaration .  (4)

	.  reduce 4


state 9
	GlobalDeclaration : RoutineDeclaration .  (5)

	.  reduce 5


state 10
	SimpleDeclaration : VariableDeclaration .  (7)

	.  reduce 7


state 11
	SimpleDeclaration : TypeDeclaration .  (8)

	.  reduce 8


state 12
	VariableDeclaration : VAR IDENTIFIER . COLON Type ExpressionTail OptionalSemicolon  (9)
	VariableDeclaration : VAR IDENTIFIER . ExpressionTail OptionalSemicolon  (10)
	ExpressionTail : .  (13)

	IS  shift 16
	COLON  shift 17
	NEWLINE  reduce 13
	SEMICOLON  reduce 13

	ExpressionTail  goto 18


state 13
	TypeDeclaration : TYPE IDENTIFIER . IS Type  (15)

	IS  shift 19
	.  error


state 14
	RoutineDeclaration : ROUTINE IDENTIFIER . LPAREN Parameters RPAREN TypeTail IS Body END OptionalSemicolon  (16)

	LPAREN  shift 20
	.  error


state 15
	GlobalDeclarations : GlobalDeclaration GlobalDeclarations .  (3)

	.  reduce 3


state 16
	ExpressionTail : IS . Expression  (14)

	IDENTIFIER  shift 21
	INTEGER_LITERAL  shift 22
	REAL_LITERAL  shift 23
	TRUE  shift 24
	FALSE  shift 25
	LPAREN  shift 26
	MINUS  shift 27
	.  error

	Expression  goto 28
	RoutineCall  goto 29
	ModifiablePrimary  goto 30
	Relation  goto 31
	Simple  goto 32
	Factor  goto 33
	Summand  goto 34
	Primary  goto 35


state 17
	VariableDeclaration : VAR IDENTIFIER COLON . Type ExpressionTail OptionalSemicolon  (9)

	IDENTIFIER  shift 36
	RECORD  shift 37
	INTEGER  shift 38
	REAL  shift 39
	BOOLEAN  shift 40
	ARRAY  shift 41
	.  error

	Type  goto 42
	PrimitiveType  goto 43
	ArrayType  goto 44
	RecordType  goto 45


state 18
	VariableDeclaration : VAR IDENTIFIER ExpressionTail . OptionalSemicolon  (10)

	NEWLINE  shift 46
	SEMICOLON  shift 47
	.  error

	OptionalSemicolon  goto 48


state 19
	TypeDeclaration : TYPE IDENTIFIER IS . Type  (15)

	IDENTIFIER  shift 36
	RECORD  shift 37
	INTEGER  shift 38
	REAL  shift 39
	BOOLEAN  shift 40
	ARRAY  shift 41
	.  error

	Type  goto 49
	PrimitiveType  goto 43
	ArrayType  goto 44
	RecordType  goto 45


state 20
	RoutineDeclaration : ROUTINE IDENTIFIER LPAREN . Parameters RPAREN TypeTail IS Body END OptionalSemicolon  (16)

	IDENTIFIER  shift 50
	.  error

	Parameters  goto 51
	ParameterDeclaration  goto 52


state 21
	RoutineCall : IDENTIFIER . RoutineCallTail  (49)
	ModifiablePrimary : IDENTIFIER . ElementCall  (96)
	ElementCall : .  (97)

	LPAREN  shift 53
	LBRACKET  shift 54
	DOT  shift 55
	LOOP  reduce 97
	THEN  reduce 97
	AND  reduce 97
	OR  reduce 97
	XOR  reduce 97
	NEWLINE  reduce 97
	SEMICOLON  reduce 97
	RPAREN  reduce 97
	RBRACKET  reduce 97
	COMMA  reduce 97
	RANGE  reduce 97
	EQUALS  reduce 97
	ASSIGN  reduce 97
	NEQUALS  reduce 97
	GREATER  reduce 97
	LESS  reduce 97
	LEQUALS  reduce 97
	GEQUALS  reduce 97
	PLUS  reduce 97
	MINUS  reduce 97
	MULTIPLY  reduce 97
	DIVIDE  reduce 97
	REMAINDER  reduce 97

	RoutineCallTail  goto 56
	ElementCall  goto 57


state 22
	Primary : INTEGER_LITERAL .  (90)

	.  reduce 90


state 23
	Primary : REAL_LITERAL .  (91)

	.  reduce 91


state 24
	Primary : TRUE .  (92)

	.  reduce 92


state 25
	Primary : FALSE .  (93)

	.  reduce 93


state 26
	Summand : LPAREN . Expression RPAREN  (89)

	IDENTIFIER  shift 21
	INTEGER_LITERAL  shift 22
	REAL_LITERAL  shift 23
	TRUE  shift 24
	FALSE  shift 25
	LPAREN  shift 26
	MINUS  shift 27
	.  error

	Expression  goto 58
	RoutineCall  goto 29
	ModifiablePrimary  goto 30
	Relation  goto 31
	Simple  goto 32
	Factor  goto 33
	Summand  goto 34
	Primary  goto 35


state 27
	Expression : MINUS . Relation  (62)

	IDENTIFIER  shift 21
	INTEGER_LITERAL  shift 22
	REAL_LITERAL  shift 23
	TRUE  shift 24
	FALSE  shift 25
	LPAREN  shift 26
	.  error

	RoutineCall  goto 29
	ModifiablePrimary  goto 30
	Relation  goto 59
	Simple  goto 32
	Factor  goto 33
	Summand  goto 34
	Primary  goto 35


state 28
	ExpressionTail : IS Expression .  (14)

	.  reduce 14


state 29
	Primary : RoutineCall .  (95)

	.  reduce 95


state 30
	Primary : ModifiablePrimary .  (94)

	.  reduce 94


state 31
	Expression : Relation . Relations  (61)
	Relations : .  (63)

	AND  shift 60
	OR  shift 61
	XOR  shift 62
	LOOP  reduce 63
	THEN  reduce 63
	NEWLINE  reduce 63
	SEMICOLON  reduce 63
	RPAREN  reduce 63
	RBRACKET  reduce 63
	COMMA  reduce 63
	RANGE  reduce 63

	Relations  goto 63
	LogicWord  goto 64


state 32
	Relation : Simple . SimpleTail  (68)
	SimpleTail : .  (69)

	EQUALS  shift 65
	NEQUALS  shift 66
	GREATER  shift 67
	LESS  shift 68
	LEQUALS  shift 69
	GEQUALS  shift 70
	LOOP  reduce 69
	THEN  reduce 69
	AND  reduce 69
	OR  reduce 69
	XOR  reduce 69
	NEWLINE  reduce 69
	SEMICOLON  reduce 69
	RPAREN  reduce 69
	RBRACKET  reduce 69
	COMMA  reduce 69
	RANGE  reduce 69

	SimpleTail  goto 71
	RelationSign  goto 72


state 33
	Simple : Factor . FactorTail  (77)
	FactorTail : .  (78)

	MULTIPLY  shift 73
	DIVIDE  shift 74
	REMAINDER  shift 75
	LOOP  reduce 78
	THEN  reduce 78
	AND  reduce 78
	OR  reduce 78
	XOR  reduce 78
	NEWLINE  reduce 78
	SEMICOLON  reduce 78
	RPAREN  reduce 78
	RBRACKET  reduce 78
	COMMA  reduce 78
	RANGE  reduce 78
	EQUALS  reduce 78
	NEQUALS  reduce 78
	GREATER  reduce 78
	LESS  reduce 78
	LEQUALS  reduce 78
	GEQUALS  reduce 78

	FactorTail  goto 76
	FactorSign  goto 77


state 34
	Factor : Summand . SummandTail  (83)
	SummandTail : .  (84)

	PLUS  shift 78
	MINUS  shift 79
	LOOP  reduce 84
	THEN  reduce 84
	AND  reduce 84
	OR  reduce 84
	XOR  reduce 84
	NEWLINE  reduce 84
	SEMICOLON  reduce 84
	RPAREN  reduce 84
	RBRACKET  reduce 84
	COMMA  reduce 84
	RANGE  reduce 84
	EQUALS  reduce 84
	NEQUALS  reduce 84
	GREATER  reduce 84
	LESS  reduce 84
	LEQUALS  reduce 84
	GEQUALS  reduce 84
	MULTIPLY  reduce 84
	DIVIDE  reduce 84
	REMAINDER  reduce 84

	SummandTail  goto 80
	SummandSign  goto 81


state 35
	Summand : Primary .  (88)

	.  reduce 88


state 36
	Type : IDENTIFIER .  (27)

	.  reduce 27


state 37
	RecordType : RECORD . NEWLINE VariableDeclarations END  (31)

	NEWLINE  shift 82
	.  error


state 38
	PrimitiveType : INTEGER .  (28)

	.  reduce 28


state 39
	PrimitiveType : REAL .  (29)

	.  reduce 29


state 40
	PrimitiveType : BOOLEAN .  (30)

	.  reduce 30


state 41
	ArrayType : ARRAY . LBRACKET Expression RBRACKET Type  (35)

	LBRACKET  shift 83
	.  error


state 42
	VariableDeclaration : VAR IDENTIFIER COLON Type . ExpressionTail OptionalSemicolon  (9)
	ExpressionTail : .  (13)

	IS  shift 16
	NEWLINE  reduce 13
	SEMICOLON  reduce 13

	ExpressionTail  goto 84


state 43
	Type : PrimitiveType .  (24)

	.  reduce 24


state 44
	Type : ArrayType .  (25)

	.  reduce 25


state 45
	Type : RecordType .  (26)

	.  reduce 26


state 46
	OptionalSemicolon : NEWLINE .  (11)

	.  reduce 11


state 47
	OptionalSemicolon : SEMICOLON .  (12)

	.  reduce 12


state 48
	VariableDeclaration : VAR IDENTIFIER ExpressionTail OptionalSemicolon .  (10)

	.  reduce 10


state 49
	TypeDeclaration : TYPE IDENTIFIER IS Type .  (15)

	.  reduce 15


state 50
	ParameterDeclaration : IDENTIFIER . COLON Type  (23)

	COLON  shift 85
	.  error


state 51
	RoutineDeclaration : ROUTINE IDENTIFIER LPAREN Parameters . RPAREN TypeTail IS Body END OptionalSemicolon  (16)

	RPAREN  shift 86
	.  error


state 52
	Parameters : ParameterDeclaration . ParameterDeclarations  (20)
	ParameterDeclarations : .  (21)

	COMMA  shift 87
	RPAREN  reduce 21

	ParameterDeclarations  goto 88


state 53
	RoutineCallTail : LPAREN . Expressions RPAREN  (50)

	IDENTIFIER  shift 21
	INTEGER_LITERAL  shift 22
	REAL_LITERAL  shift 23
	TRUE  shift 24
	FALSE  shift 25
	LPAREN  shift 26
	MINUS  shift 27
	.  error

	Expression  goto 89
	RoutineCall  goto 29
	ModifiablePrimary  goto 30
	Expressions  goto 90
	Relation  goto 31
	Simple  goto 32
	Factor  goto 33
	Summand  goto 34
	Primary  goto 35


state 54
	ElementCall : LBRACKET . Expression RBRACKET ElementCall  (99)

	IDENTIFIER  shift 21
	INTEGER_LITERAL  shift 22
	REAL_LITERAL  shift 23
	TRUE  shift 24
	FALSE  shift 25
	LPAREN  shift 26
	MINUS  shift 27
	.  error

	Expression  goto 91
	RoutineCall  goto 29
	ModifiablePrimary  goto 30
	Relation  goto 31
	Simple  goto 32
	Factor  goto 33
	Summand  goto 34
	Primary  goto 35


state 55
	ElementCall : DOT . IDENTIFIER ElementCall  (98)

	IDENTIFIER  shift 92
	.  error


state 56
	RoutineCall : IDENTIFIER RoutineCallTail .  (49)

	.  reduce 49


state 57
	ModifiablePrimary : IDENTIFIER ElementCall .  (96)

	.  reduce 96


state 58
	Summand : LPAREN Expression . RPAREN  (89)

	RPAREN  shift 93
	.  error


state 59
	Expression : MINUS Relation .  (62)

	.  reduce 62


state 60
	LogicWord : AND .  (65)

	.  reduce 65


state 61
	LogicWord : OR .  (66)

	.  reduce 66


state 62
	LogicWord : XOR .  (67)

	.  reduce 67


state 63
	Expression : Relation Relations .  (61)

	.  reduce 61


state 64
	Relations : LogicWord . Relation Relations  (64)

	IDENTIFIER  shift 21
	INTEGER_LITERAL  shift 22
	REAL_LITERAL  shift 23
	TRUE  shift 24
	FALSE  shift 25
	LPAREN  shift 26
	.  error

	RoutineCall  goto 29
	ModifiablePrimary  goto 30
	Relation  goto 94
	Simple  goto 32
	Factor  goto 33
	Summand  goto 34
	Primary  goto 35


state 65
	RelationSign : EQUALS .  (75)

	.  reduce 75


state 66
	RelationSign : NEQUALS .  (76)

	.  reduce 76


state 67
	RelationSign : GREATER .  (72)

	.  reduce 72


state 68
	RelationSign : LESS .  (71)

	.  reduce 71


state 69
	RelationSign : LEQUALS .  (73)

	.  reduce 73


state 70
	RelationSign : GEQUALS .  (74)

	.  reduce 74


state 71
	Relation : Simple SimpleTail .  (68)

	.  reduce 68


state 72
	SimpleTail : RelationSign . Simple SimpleTail  (70)

	IDENTIFIER  shift 21
	INTEGER_LITERAL  shift 22
	REAL_LITERAL  shift 23
	TRUE  shift 24
	FALSE  shift 25
	LPAREN  shift 26
	.  error

	RoutineCall  goto 29
	ModifiablePrimary  goto 30
	Simple  goto 95
	Factor  goto 33
	Summand  goto 34
	Primary  goto 35


state 73
	FactorSign : MULTIPLY .  (80)

	.  reduce 80


state 74
	FactorSign : DIVIDE .  (81)

	.  reduce 81


state 75
	FactorSign : REMAINDER .  (82)

	.  reduce 82


state 76
	Simple : Factor FactorTail .  (77)

	.  reduce 77


state 77
	FactorTail : FactorSign . Factor FactorTail  (79)

	IDENTIFIER  shift 21
	INTEGER_LITERAL  shift 22
	REAL_LITERAL  shift 23
	TRUE  shift 24
	FALSE  shift 25
	LPAREN  shift 26
	.  error

	RoutineCall  goto 29
	ModifiablePrimary  goto 30
	Factor  goto 96
	Summand  goto 34
	Primary  goto 35


state 78
	SummandSign : PLUS .  (86)

	.  reduce 86


state 79
	SummandSign : MINUS .  (87)

	.  reduce 87


state 80
	Factor : Summand SummandTail .  (83)

	.  reduce 83


state 81
	SummandTail : SummandSign . Summand SummandTail  (85)

	IDENTIFIER  shift 21
	INTEGER_LITERAL  shift 22
	REAL_LITERAL  shift 23
	TRUE  shift 24
	FALSE  shift 25
	LPAREN  shift 26
	.  error

	RoutineCall  goto 29
	ModifiablePrimary  goto 30
	Summand  goto 97
	Primary  goto 35


state 82
	RecordType : RECORD NEWLINE . VariableDeclarations END  (31)
	VariableDeclarations : .  (32)

	VAR  shift 1
	NEWLINE  shift 98
	END  reduce 32

	VariableDeclaration  goto 99
	VariableDeclarations  goto 100


state 83
	ArrayType : ARRAY LBRACKET . Expression RBRACKET Type  (35)

	IDENTIFIER  shift 21
	INTEGER_LITERAL  shift 22
	REAL_LITERAL  shift 23
	TRUE  shift 24
	FALSE  shift 25
	LPAREN  shift 26
	MINUS  shift 27
	.  error

	Expression  goto 101
	RoutineCall  goto 29
	ModifiablePrimary  goto 30
	Relation  goto 31
	Simple  goto 32
	Factor  goto 33
	Summand  goto 34
	Primary  goto 35


state 84
	VariableDeclaration : VAR IDENTIFIER COLON Type ExpressionTail . OptionalSemicolon  (9)

	NEWLINE  shift 46
	SEMICOLON  shift 47
	.  error

	OptionalSemicolon  goto 102


state 85
	ParameterDeclaration : IDENTIFIER COLON . Type  (23)

	IDENTIFIER  shift 36
	RECORD  shift 37
	INTEGER  shift 38
	REAL  shift 39
	BOOLEAN  shift 40
	ARRAY  shift 41
	.  error

	Type  goto 103
	PrimitiveType  goto 43
	ArrayType  goto 44
	RecordType  goto 45


state 86
	RoutineDeclaration : ROUTINE IDENTIFIER LPAREN Parameters RPAREN . TypeTail IS Body END OptionalSemicolon  (16)
	TypeTail : .  (18)

	COLON  shift 104
	IS  reduce 18

	TypeTail  goto 105


state 87
	ParameterDeclarations : COMMA . ParameterDeclaration  (22)

	IDENTIFIER  shift 50
	.  error

	ParameterDeclaration  goto 106


state 88
	Parameters : ParameterDeclaration ParameterDeclarations .  (20)

	.  reduce 20


state 89
	Expressions : Expression .  (51)

	.  reduce 51


state 90
	RoutineCallTail : LPAREN Expressions . RPAREN  (50)
	Expressions : Expressions . COMMA Expression  (52)

	RPAREN  shift 107
	COMMA  shift 108
	.  error


state 91
	ElementCall : LBRACKET Expression . RBRACKET ElementCall  (99)

	RBRACKET  shift 109
	.  error


state 92
	ElementCall : DOT IDENTIFIER . ElementCall  (98)
	ElementCall : .  (97)

	LBRACKET  shift 54
	DOT  shift 55
	LOOP  reduce 97
	THEN  reduce 97
	AND  reduce 97
	OR  reduce 97
	XOR  reduce 97
	NEWLINE  reduce 97
	SEMICOLON  reduce 97
	RPAREN  reduce 97
	RBRACKET  reduce 97
	COMMA  reduce 97
	RANGE  reduce 97
	EQUALS  reduce 97
	ASSIGN  reduce 97
	NEQUALS  reduce 97
	GREATER  reduce 97
	LESS  reduce 97
	LEQUALS  reduce 97
	GEQUALS  reduce 97
	PLUS  reduce 97
	MINUS  reduce 97
	MULTIPLY  reduce 97
	DIVIDE  reduce 97
	REMAINDER  reduce 97

	ElementCall  goto 110


state 93
	Summand : LPAREN Expression RPAREN .  (89)

	.  reduce 89


state 94
	Relations : LogicWord Relation . Relations  (64)
	Relations : .  (63)

	AND  shift 60
	OR  shift 61
	XOR  shift 62
	LOOP  reduce 63
	THEN  reduce 63
	NEWLINE  reduce 63
	SEMICOLON  reduce 63
	RPAREN  reduce 63
	RBRACKET  reduce 63
	COMMA  reduce 63
	RANGE  reduce 63

	Relations  goto 111
	LogicWord  goto 64


state 95
	SimpleTail : RelationSign Simple . SimpleTail  (70)
	SimpleTail : .  (69)

	EQUALS  shift 65
	NEQUALS  shift 66
	GREATER  shift 67
	LESS  shift 68
	LEQUALS  shift 69
	GEQUALS  shift 70
	LOOP  reduce 69
	THEN  reduce 69
	AND  reduce 69
	OR  reduce 69
	XOR  reduce 69
	NEWLINE  reduce 69
	SEMICOLON  reduce 69
	RPAREN  reduce 69
	RBRACKET  reduce 69
	COMMA  reduce 69
	RANGE  reduce 69

	SimpleTail  goto 112
	RelationSign  goto 72


state 96
	FactorTail : FactorSign Factor . FactorTail  (79)
	FactorTail : .  (78)

	MULTIPLY  shift 73
	DIVIDE  shift 74
	REMAINDER  shift 75
	LOOP  reduce 78
	THEN  reduce 78
	AND  reduce 78
	OR  reduce 78
	XOR  reduce 78
	NEWLINE  reduce 78
	SEMICOLON  reduce 78
	RPAREN  reduce 78
	RBRACKET  reduce 78
	COMMA  reduce 78
	RANGE  reduce 78
	EQUALS  reduce 78
	NEQUALS  reduce 78
	GREATER  reduce 78
	LESS  reduce 78
	LEQUALS  reduce 78
	GEQUALS  reduce 78

	FactorTail  goto 113
	FactorSign  goto 77

